--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
-
+<p>"Hello World"</p>
 	<script src="" async defer></script>
 </body>
 
