this is Spartaaaaaaaa

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/public/style.css">
+
+	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Work+Sans" rel="stylesheet">
 </head>
 
 <body>
