--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 	<h1>Jeff sucks chin chin</h1>
-	<script src="" async defer></script>
+	<p>Click below to go to app</p>
+	<a href="app.html"><img src="assets/Banner/Banner.png" width="500"></a>
 </body>
 
 </html>
