Fk your chin chin

--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,18 @@
 	<title>TrashTrack</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
-
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Work+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="/public/style.css">
 </head>
 
 <body>
 	<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
-	<h1>Jeff sucks chin chin</h1>
+
+	<nav>
+		<a href="/search.html"></a>
+	</nav>
+
 	<script src="" async defer></script>
 </body>
 
