--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,14 @@
 		<![endif]-->
 
 	<nav>
-		<a href="/search.html"></a>
+		<a href="/index.html">Home</a>
 	</nav>
+
+	<div class="searching_button" id="search">
+
+		
+
+	</div>
 
 	<script src="" async defer></script>
 </body>
