--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,12 @@
 		<![endif]-->
 
 	<nav>
-		<a href="/index.html">Home</a>
+		<a href="/index.html" style="text-decoration: none">Home</a>
 	</nav>
 
 	<div class="searching_button" id="search">
 
-		
+		<a href="/search.html" style="text-decoration: none" id="browse">Browse Me</a>
 
 	</div>
 
