Added css and changed some css

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<title>TrashTrack</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/public/style.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -20,13 +20,13 @@
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
-	<nav>
-		<a href="/index.html" style="text-decoration: none">Home</a>
+	<div class="nav">
+		<a href="./index.html" style="text-decoration: none" id="home">Home</a>
 	</nav>
 
 	<div class="searching_button" id="search">
 
-		<a href="/search.html" style="text-decoration: none" id="browse">Browse Me</a>
+		<a href="./app.html" style="text-decoration: none" id="browse">Browse Me</a>
 
 	</div>
 
