Changed and added CSS and HTML (#16)
* Fk your chin chin

* Update index.html

changed to home in the nav

* Update index.html

Added links

* Added css and changed some css

--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,25 @@
 	<title>TrashTrack</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
-
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Work+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 	<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
-	<h1>Jeff sucks chin chin</h1>
-	<p>Click below to go to app</p>
-	<a href="app.html"><img src="assets/Banner/Banner.png" width="500"></a>
+
+	<div class="nav">
+		<a href="./index.html" style="text-decoration: none" id="home">Home</a>
+	</nav>
+
+	<div class="searching_button" id="search">
+
+		<a href="./app.html" style="text-decoration: none" id="browse">Browse Me</a>
+
+	</div>
+
+	<script src="" async defer></script>
 </body>
 
 </html>
