Added CSS and HTML

--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,13 @@
 
 	<div class="nav">
 		<a href="./index.html" style="text-decoration: none" id="home">Home</a>
-	</nav>
+	</div>
 
 	<div class="searching_button" id="search">
-
+		
+	</div>
+	<div id="text">
 		<a href="./app.html" style="text-decoration: none" id="browse">Browse Me</a>
-
 	</div>
 
 	<script src="" async defer></script>
