Started ejs templating (if we actually need it)

--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,15 @@
 
 	<div class="nav">
 		<a href="./index.html" style="text-decoration: none" id="home">Home</a>
-	</nav>
+		</nav>
 
-	<div class="searching_button" id="search">
+		<div class="searching_button" id="search">
 
-		<a href="./app.html" style="text-decoration: none" id="browse">Browse Me</a>
+			<a href="/app" style="text-decoration: none" id="browse">Browse Me</a>
 
-	</div>
+		</div>
 
-	<script src="" async defer></script>
+		<script src="" async defer></script>
 </body>
 
 </html>
