--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
 		
 	</div>
 	<div id="text">
-		<a href="./app.html" style="text-decoration: none" id="browse">Browse Me</a>
+		<a href="/app" style="text-decoration: none" id="browse">Browse Me</a>
 	</div>
 
-	<script src="" async defer></script>
+		<script src="" async defer></script>
 </body>
 
 </html>
